[package]
name = "py-opsml"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opsml"
crate-type = ["cdylib", "rlib"]

[dependencies]
opsml-cards = { workspace = true }
opsml-error = { workspace = true }
opsml-interfaces = { workspace = true }
opsml-registry = { workspace = true }
opsml-experiment = { workspace = true }
opsml-semver = { workspace = true }
opsml-server = { workspace = true, optional = true }
opsml-settings = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true, optional = true }
rusty-logging = { workspace = true }
scouter-client = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
server = ["opsml-registry/server", "opsml-server", "tokio", "reqwest"]


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
debug = false